insurance funnel: Removing unnecessary html tags and styling which corrects the alignment problems and correcting styles accordingly

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -277,6 +277,7 @@ h3 {
       -moz-box-shadow: inset 0 0 4px #dcdcde;
       -webkit-box-shadow: inset 0 0 4px #dcdcde;
       box-shadow: inset 0 0 4px #dcdcde;
+      border-radius: 5px;
     }
   }
 
